--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # Site settings
-title: "Carte Noire"
-email: jacob@jacobtomlinson.co.uk
-description: "A dark blog theme for Jekyll."
+title: "Max Waine"
+email: contact@mwaine.com
+description: "Student coder."
 baseurl: ""
-url: "http://carte-noire.jacobtomlinson.co.uk/"
-title_description: "A dark blog theme for Jekyll focusing on a clear reading experience. Large text and a narrow body makes carte noire a gorgeous read. With excellent code snippet support and integrated tools such as AddThis and Disqus giving your Jekyll blog all the functionality your users expect."
-title_image: "https://www.gravatar.com/avatar/00000000000000000000000000000000?s=500&d=mm"
+url: "http://mwaine.com/"
+title_description: "This site provides a working portfolio and blogging platform for myself. If you wish to see my portfolio  or search through my blog posts then open the sidebar on the left."
+title_image: "https://avatars1.githubusercontent.com/u/5298767?v=3&s=466"
 google_analytics: "UA-20365477-4"
 disqus_account: cartenoire
-github_repository: https://github.com/jacobtomlinson/carte-noire
+github_repository: https://github.com/Altazimuth/Altazimuth.github.io
 addthis_id: ra-513c6fa83da6ec67
 post_limit: 5
 
 # Social usernames/URLs
-twitter_username: _jacobtomlinson
-github_username:  jacobtomlinson
-linkedin_link: http://carte-noire.jacobtomlinson.co.uk/
-google_plus_link: http://carte-noire.jacobtomlinson.co.uk/
-stackoverflow_link: http://carte-noire.jacobtomlinson.co.uk/
+twitter_username: Altazimuth_
+github_username:  Altazimuth
+#linkedin_link: http://foo.bar.baz/
+#google_plus_link: http://foo.bar.baz/
+#stackoverflow_link: http://foo.bar.baz/
 
 # Footer
-footer_left: "Made with <i class=\"fa fa-heart\"></i> by <a href=\"https://twitter.com/_JacobTomlinson\">Jacob Tomlinson</a>"
-footer_right: "&lt;/&gt; on <a href=\"https://github.com/jacobtomlinson/carte-noire\">Github</a> &nbsp;<i class=\"fa fa-github-alt\"></i>"
+footer_left: "Made by Max Waine using <a href=\"https://twitter.com/_JacobTomlinson\">Jacob Tomlinson's</a> Carte Noire theme"
+footer_right: "&lt;/&gt; on <a href=\"https://github.com/Altazimuth/Altazimuth.github.io\">Github</a> &nbsp;<i class=\"fa fa-github-alt\"></i>"
 
 # Build settings
 markdown: kramdown
