--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ baseurl: ""
 url: "http://mwaine.com/"
 title_description: "This site provides a working portfolio and blogging platform for myself. If you wish to see my portfolio  or search through my blog posts then open the sidebar on the left."
 title_image: "https://avatars1.githubusercontent.com/u/5298767?v=3&s=466"
-google_analytics: "UA-20365477-4"
-disqus_account: cartenoire
+google_analytics: "UA-84601634-1"
+disqus_account: mwaine-com
 github_repository: https://github.com/Altazimuth/Altazimuth.github.io
-addthis_id: ra-513c6fa83da6ec67
+#addthis_id: ra-513c6fa83da6ec67
 post_limit: 5
 
 # Social usernames/URLs
