--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_repository: https://github.com/Altazimuth/Altazimuth.github.io
 post_limit: 5
 
 # Social usernames/URLs
-twitter_username: Altazimuth_
+twitter_username: AltazimuthEE
 github_username:  Altazimuth
 #linkedin_link: http://foo.bar.baz/
 #google_plus_link: http://foo.bar.baz/
