I'm a career programmer now and have been for two years

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Max Waine"
 email: contact@mwaine.com
-description: "Student coder."
+description: "Game programmer."
 baseurl: ""
 url: "http://mwaine.com/"
 title_description: "This site provides a working portfolio and blogging platform for myself. If you wish to see my portfolio  or search through my blog posts then open the sidebar on the left."
